--- a/oi.html
+++ b/oi.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 1</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    oi, mundo :)
+    
+    <div class="index">
+        <h1>Verificador de boçais</h1>
+        <input type="text" placeholder="Digite seu nome" id="nome">
+        <br><br><br>
+        <input type= "button" value="Checar" onclick="verificar()">
+        
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
