melhorei pra celular

--- a/oi.html
+++ b/oi.html
@@ -14,8 +14,11 @@ h1 {
     color: rgb(255, 255, 255);
     padding: 5px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    font-weight: 500;
+    font-size: 30px;
+    
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
 }
 .index {
     background-color: lightcoral;
@@ -32,7 +35,7 @@ h1 {
 }
 .index input[type = "text"]{
     width: 50%;
-    height: 75px;
+    height: 20%;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
@@ -52,7 +55,7 @@ h1 {
 }
 .index input[type = "button"]{
     width: 25%;
-    height: 75px;
+    height: 20%;
     text-align: center;
     color: white;
     background: none;
@@ -80,7 +83,7 @@ h1 {
         <h1>Verificador de boçais</h1>
         <input type="text" placeholder="Nome" id="nome">
         <br><br>
-        <input type= "button" value="Checar" onclick="verificar()">
+        <input type= "button" value="Ver" onclick="verificar()">
         
     </div>
 
